nlog database target is working

--- a/NLogEvaluation/App.config
+++ b/NLogEvaluation/App.config
@@ -1,6 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
-    </startup>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
+  </startup>
+  <connectionStrings>
+    <add name="NLog" providerName="System.Data.SqlClient" connectionString="Data Source=.;Initial Catalog=SFAppLogs;Integrated Security=True;App=NLogEvaluation"/>
+  </connectionStrings>
+  <appSettings>
+    <add key="AppName" value="FizzBuzz"/>
+  </appSettings>
 </configuration>
