--- a/NLogEvaluation/App.config
+++ b/NLogEvaluation/App.config
@@ -1,12 +1,20 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
   </startup>
   <connectionStrings>
-    <add name="NLog" providerName="System.Data.SqlClient" connectionString="Data Source=.;Initial Catalog=SFAppLogs;Integrated Security=True;App=NLogEvaluation"/>
+    <add name="NLog" providerName="System.Data.SqlClient" connectionString="Data Source=.;Initial Catalog=SFAppLogs;Integrated Security=True;App=NLogEvaluation" />
   </connectionStrings>
   <appSettings>
-    <add key="AppName" value="FizzBuzz"/>
+    <add key="AppName" value="FizzBuzz" />
   </appSettings>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="NLog" publicKeyToken="5120e14c03d0593c" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
