--- a/NLogEvaluation/packages.config
+++ b/NLogEvaluation/packages.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Castle.Core" version="3.3.3" targetFramework="net46" />
+  <package id="Castle.Core-NLog" version="3.3.3" targetFramework="net46" />
+  <package id="Castle.LoggingFacility" version="3.3.0" targetFramework="net46" />
+  <package id="Castle.Windsor" version="3.3.0" targetFramework="net46" />
   <package id="NLog" version="4.2.3" targetFramework="net46" />
   <package id="NLog.Config" version="4.2.3" targetFramework="net46" />
   <package id="NLog.Extended" version="4.0.0.1" targetFramework="net46" />
